--- a/package.json
+++ b/package.json
@@ -1,181 +1,71 @@
 {
-  "name": "@bigcommerce/checkout",
-  "version": "1.509.0",
+  "name": "bigcommerce-cornerstone",
+  "description": "The BigCommerce reference theme for the Stencil platform",
+  "version": "4.3.0",
   "private": true,
-  "description": "Browser-based application providing a seamless UI for BigCommerce shoppers to complete their checkout.",
-  "license": "MIT",
-  "engines": {
-    "node": "20",
-    "npm": "9"
-  },
-  "scripts": {
-    "preinstall": "npx check-node-version --package",
-    "prebuild": "rm -rf dist && rm -rf packages/test-framework/report",
-    "build": "nx run core:build",
-    "build:server": "http-server dist",
-    "dev": "nx run core:dev",
-    "dev:server": "http-server build",
-    "e2e": "npm run build && npx playwright install && PORT=5005 MODE=REPLAY npx playwright test",
-    "release": "echo 'Please do not release locally, use CircleCi'",
-    "release:alpha": "npm run lint && npm run test -- --coverage && npm run build -- --env prerelease=prerelease && npm run release:version",
-    "release:version": "git add dist && standard-version -a",
-    "test:core": "jest --config packages/core/jest.config.js",
-    "test:others": "npx nx run-many --all --target=test --exclude core --parallel=5 -- --runInBand",
-    "generate": "npx nx run core:generate",
-    "lint": "npx nx run-many --target=lint --all",
-    "test": "npx nx run-many --target=test --all",
-    "test:watch": "npx nx run-many --target=test --all --watch"
-  },
-  "jest-junit": {
-    "addFileAttribute": "true"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bigcommerce/checkout-js.git"
-  },
   "author": "BigCommerce",
-  "bugs": {
-    "url": "https://github.com/bigcommerce/checkout-js/issues"
-  },
-  "prettier": "@bigcommerce/eslint-config/prettier",
-  "homepage": "https://github.com/bigcommerce/checkout-js#readme",
+  "license": "MIT",
   "dependencies": {
-    "@bigcommerce/checkout-sdk": "^1.631.0",
-    "@bigcommerce/citadel": "^2.15.1",
-    "@bigcommerce/form-poster": "^1.2.2",
-    "@bigcommerce/memoize": "^1.0.0",
-    "@bigcommerce/request-sender": "^0.5.1",
-    "@bigcommerce/script-loader": "^2.2.2",
-    "@sentry/browser": "^7.11.1",
-    "@sentry/integrations": "^7.54.0",
-    "@types/card-validator": "^4.1.0",
-    "@types/classnames": "^2.2.6",
-    "@types/credit-card-type": "^7.0.0",
-    "@types/dompurify": "^0.0.33",
-    "@types/es6-promise": "^0.0.33",
-    "@types/glob": "^7.2.0",
-    "@types/googlemaps": "^3.43.3",
-    "@types/lodash": "^4.14.136",
-    "@types/react": "^17.0.61",
-    "@types/react-datepicker": "^4.10.0",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-modal": "^3.8.0",
-    "@types/react-transition-group": "^2.0.15",
-    "@types/shallowequal": "^1.1.0",
-    "@types/yup": "^0.26.3",
-    "@welldone-software/why-did-you-render": "^3.2.3",
-    "card-validator": "^6.1.0",
-    "classnames": "^2.3.2",
-    "credit-card-type": "^8.0.0",
-    "dompurify": "^2.4.0",
-    "downshift": "^7.6.0",
-    "formik": "^1.5.8",
-    "jest-each": "^29.7.0",
-    "local-storage-fallback": "^4.1.1",
-    "lodash": "^4.17.21",
-    "object-hash": "^1.3.0",
-    "prop-types": "^15.6.2",
-    "react": "^17.0.2",
-    "react-datepicker": "^4.25.0",
-    "react-dom": "^17.0.2",
-    "react-media": "^1.10.0",
-    "react-modal": "^3.8.1",
-    "react-popper": "^1.3.2",
-    "react-transition-group": "^2.5.3",
-    "reselect": "^4.1.7",
-    "shallowequal": "^1.1.0",
-    "tslib": "^2.5.3",
-    "utility-types": "^2.1.0",
-    "yup": "^0.26.6"
+    "@babel/polyfill": "^7.4.4",
+    "@bigcommerce/stencil-utils": "^5.0.1",
+    "core-js": "^2.6.10",
+    "creditcards": "^3.0.1",
+    "easyzoom": "^2.5.2",
+    "foundation-sites": "^5.5.3",
+    "jquery": "^3.4.1",
+    "jstree": "vakata/jstree",
+    "lazysizes": "5.1.0",
+    "lodash": "^4.17.4",
+    "nanobar": "^0.4.2",
+    "nod-validate": "^2.0.12",
+    "object-fit-images": "^3.2.4",
+    "slick-carousel": "^1.8.1",
+    "svg-injector": "^1.1.3",
+    "sweetalert2": "^6.11.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@bigcommerce/eslint-config": "^2.6.1",
-    "@faker-js/faker": "^6.3.1",
-    "@nrwl/cli": "^13.10.6",
-    "@nrwl/devkit": "^13.10.6",
-    "@nrwl/eslint-plugin-nx": "^14.0.0",
-    "@nrwl/jest": "^13.10.6",
-    "@nrwl/js": "13.10.6",
-    "@nrwl/linter": "^13.10.6",
-    "@nrwl/nx-plugin": "^13.10.6",
-    "@nrwl/workspace": "13.10.6",
-    "@playwright/test": "^1.25.0",
-    "@pollyjs/adapter": "^6.0.4",
-    "@pollyjs/core": "^6.0.5",
-    "@pollyjs/node-server": "^6.0.1",
-    "@pollyjs/persister-fs": "^6.0.5",
-    "@swc/core": "^1.3.59",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/applepayjs": "^3.0.4",
-    "@types/ejs": "^3.1.0",
-    "@types/enzyme": "^3.10.3",
-    "@types/jest": "^24.0.17",
-    "@types/node": "^12.6.9",
-    "@types/object-hash": "^1.2.0",
-    "@types/react-test-renderer": "^17.0.2",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
-    "babel-loader": "^8.0.6",
-    "circular-dependency-plugin": "^5.2.0",
-    "conventional-recommended-bump": "^6.0.0",
-    "core-js": "^3.1.4",
-    "css-loader": "^3.1.0",
-    "dotenv": "^16.0.0",
-    "ejs": "^3.1.10",
-    "enzyme": "^3.10.0",
-    "enzyme-to-json": "^3.3.5",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.11.0",
-    "file-loader": "^6.2.0",
-    "glob": "^8.0.1",
-    "http-server": "^14.1.1",
-    "image-webpack-loader": "^8.1.0",
-    "jest": "^26.6.3",
-    "jest-junit": "^15.0.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "msw": "^1.2.1",
-    "nx": "^13.10.6",
-    "polly-adapter-playwright": "^2.1.0",
-    "prettier": "^2.7.1",
-    "react-test-renderer": "^17.0.2",
-    "sass": "^1.60.0",
-    "sass-loader": "^13.2.1",
-    "semver": "^6.3.1",
-    "setup-polly-jest": "^0.10.0",
-    "source-map-loader": "^0.2.4",
-    "standard-version": "^9.5.0",
-    "style-loader": "^0.23.1",
-    "stylelint": "^15.10.1",
-    "stylelint-config-standard-scss": "^7.0.1",
-    "stylelint-order": "^6.0.3",
-    "stylelint-webpack-plugin": "^4.1.0",
-    "terser-webpack-plugin": "^5.3.3",
-    "ts-jest": "^26.5.6",
-    "ts-loader": "^9.3.0",
-    "tslib": "^2.5.3",
-    "typescript": "^4.7.4",
-    "webpack": "^5.76.0",
-    "webpack-assets-manifest": "^5.1.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-inject-plugin": "^1.5.3",
-    "yargs": "^14.0.0"
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@bigcommerce/citadel": "^2.15.1",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-lodash": "^3.3.4",
+    "clean-webpack-plugin": "^0.1.19",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.3.2",
+    "grunt-eslint": "^20.0.0",
+    "grunt-karma": "^2.0.0",
+    "grunt-scss-lint": "^0.5.0",
+    "grunt-svgstore": "^1.0.0",
+    "imports-loader": "^0.7.1",
+    "jasmine-core": "^2.2.0",
+    "karma": "^1.7.0",
+    "karma-babel-preprocessor": "^8.0.0-beta.0",
+    "karma-coverage": "^1.1.1",
+    "karma-es6-shim": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-verbose-reporter": "0.0.6",
+    "karma-webpack": "^2.0.4",
+    "lighthouse": "^4.0.0-alpha.2-3.2.1",
+    "load-grunt-config": "^0.19.2",
+    "lodash-webpack-plugin": "^0.11.2",
+    "npx": "^10.2.0",
+    "time-grunt": "^1.2.2",
+    "webpack": "~4.27.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "~3.1.2",
+    "webpack-merge": "~4.1.2"
   },
-  "sideEffects": false,
-  "standard-version": {
-    "scripts": {
-      "prebump": "./scripts/standard-version/prebump.js"
-    }
+  "scripts": {
+    "build": "npx webpack --config webpack.prod.js",
+    "buildDev": "npx webpack --config webpack.dev.js",
+    "lighthouse": "npx lighthouse --config-path=lighthouse-config.js --quiet --output json --chrome-flags=\"--headless\" $URL | jq '.audits | map_values(.rawValue)'"
   }
 }
