feat: Add environment-aware deployment and build verification
- Update LambdaService.ts to use environment-injected API URLs and client IDs
- Add dynamic store hash resolution with fallback to production values
- Implement comprehensive deployment scripts with environment variable injection
- Add S3 deployment capabilities with automated upload and verification
- Update Nx configuration to include environment files in named inputs
- Add build verification scripts to ensure correct environment configuration
- Improve deployment reliability and environment isolation

These changes resolve production/staging environment contamination issues
and enable proper multi-environment deployment workflows.

--- a/nx.json
+++ b/nx.json
@@ -16,8 +16,30 @@
           "dev",
           "lint",
           "test"
-        ]
+        ],
+        "cacheDirectory": "tmp/nx-cache",
+        "skipNxCache": false
       }
+    }
+  },
+  "namedInputs": {
+    "default": ["{projectRoot}/**/*", "sharedGlobals"],
+    "production": [
+      "default",
+      "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
+      "!{projectRoot}/tsconfig.spec.json",
+      "!{projectRoot}/.eslintrc.json"
+    ],
+    "sharedGlobals": [
+      "{workspaceRoot}/.env*",
+      "{workspaceRoot}/webpack.config.js",
+      "{workspaceRoot}/package.json"
+    ]
+  },
+  "targetDefaults": {
+    "build": {
+      "inputs": ["production", "^production"],
+      "dependsOn": ["^build"]
     }
   }
 }
